<resources>
    <string name="app_name">LMT 2.0</string>
    <string name="tu_cesta">CESTA</string>
    <string name="total">Total :</string>
    <string name="cancelar">Cancelar</string>
    <string name="finalizar_y_comprar">Finalizar y comprar</string>
    <string name="marcas_destacadas">MARCAS DESTACADAS</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">5</string>
    <string name="modelos_destacados">MODELOS DESTACADOS</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="_20">20</string>
    <string name="ver_todo">VER TODO</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="recordar">Recordar</string>
    <string name="acceder">ACCEDER</string>
    <string name="aun_no_registrado">¿Aún no estás registrado?</string>
    <string name="registrar">REGISTRAR</string>
    <string name="acceder_sin_registrar">ACCEDER SIN REGISTRAR</string>
    <string name="nombre_usuario">Acceder</string>
    <string name="foto_producto">Foto Producto</string>
    <string name="nombre_producto_pordefecto">Nombre producto por defecto</string>
    <string name="precio">Precio :</string>
    <string name="comprar">Comprar</string>
    <string name="info_producto">Información</string>
    <string name="btMas">+</string>
    <string name="btMenos">-</string>
    <string name="finalizar_y_pagar">ANTES DE FINALIZAR</string>
    <string name="pregunta_finalizar_compra">Eliga un método de envio:</string>
    <string name="compra_exitosa">Compra realizada con exito.</string>
    <string name="cuidado">¡Cuidado!</string>
    <string name="pregunta_eliminar_producto_cesta">¿Estás seguro de que deseas eliminar el producto de la cesta?</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="acerca_de">ACERCA DE</string>
    <string name="acerca_de_mensaje">"\nProgramación y diseño :\n"
                                    "Iván Alonso Díaz\n\n"
                                    "Idea :\nIván Alonso Díaz y Gema Gil López\n\n"
                                    "Versión :\n 2.0"</string>
    <string name="volver">Volver</string>
    <string name="producto_ya_en_cesta">Producto ya se encuentra en la cesta</string>
    <string name="producto_añadido_cesta">Producto añadido a la cesta</string>
    <string name="usuario_ya_existe">USUARIO YA EXISTENTE.</string>
    <string name="registrado_correcto">Usuario registrado correctamente.</string>
    <string name="seleccione_foto">Seleccione una foto.</string>
    <string name="campos_vacios">Campo/s vacios.</string>
    <string name="contraseña_correcta">Contraseña correcta.</string>
    <string name="contraseña_incorrecta">Contraseña incorrecta.</string>
    <string name="usuario_incorrecto">Usuario incorrecto.</string>
    <string name="eliminar_producto">Para eliminar pulse eliminar.</string>
    <string name="proximamente">PROXIMAMENTE</string>
    <string name="cesta_vacia">Cesta vacía.</string>
    <string name="debe_iniciar_sesion">Inicie sesión para finalizar la compra.</string>

    <string-array name="ordenLista">
        <item>PRECIO ASCENDENTE</item>
        <item>PRECIO DESCENDENTE</item>
        <item>POPULARIDAD</item>
        <item>VENTAS</item>
    </string-array>
    <string-array name="filtroMarcas">
        <item>TODAS</item>
        <item>APPLE</item>
        <item>HUAWEI</item>
        <item>ONEPLUS</item>
        <item>OPPO</item>
        <item>SAMSUNG</item>
        <item>XIAOMI</item>
    </string-array>
    <string name="title_activity_mapa">Map</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_preferencias">Preferencias</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_activity_pestanas">PestanasActivity</string>
    <string name="tab_text_1">A DOMICILIO</string>
    <string name="tab_text_2">RECOGER EN TIENDA</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="linea_direcci_n_1">LINEA DIRECCIÓN 1</string>
    <string name="linea_direcci_n_2">LINEA DIRECCIÓN 2</string>
    <string name="c_digo_postal">CÓDIGO POSTAL</string>
    <string name="ciudad">CIUDAD</string>
    <string name="realizar_pedido">REALIZAR PEDIDO</string>
    <string name="ir_a_la_tienda">Ir a la tienda</string>
    <string name="contacto">Contacto</string>
    <string name="apariencia">Apariencia</string>
    <string name="general">General</string>
    <string name="informaci_n_detallada">Información detallada</string>
    <string name="obtener_ubicaci_n">Obtener ubicación</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="t_lefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="todos_campos">TODOS LOS CAMPOS SON OBLIGATORIOS.</string>
    <string name="pedido_realizado">PEDIDO  REALIZADO.    GRACIAS  POR  SU  COMPRA.</string>
    <string name="conexion_fallida">Conexión fallida con el servidor.</string>
    <string name="contrasña_incorrecta">Contraseña incorrecta</string>
    <string name="contraseñas_no_coinciden">Las contraseñas no coinciden</string>
</resources>
