<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    android:backgroundTint="@android:color/holo_red_dark"
    tools:context=".activities.DestacadosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marcas_destacadas"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="32sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/marca1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/_1"
                    android:onClick="onClick"
                    app:srcCompat="@android:color/background_dark" />

                <ImageView
                    android:id="@+id/marca2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/_2"
                    app:srcCompat="@color/common_google_signin_btn_text_dark_focused" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/marca3"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/_3"
                    app:srcCompat="@android:color/background_dark" />

                <ImageView
                    android:id="@+id/marca4"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/_4"
                    app:srcCompat="@color/common_google_signin_btn_text_dark_focused" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modelos_destacados"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="32sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/producto1"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo"
                    android:contentDescription="@string/_5"
                    android:isScrollContainer="false"
                    android:keepScreenOn="false"
                    android:onClick="onClick"
                    android:paddingStart="155dp"
                    android:paddingEnd="25dp" />

                <ImageButton
                    android:id="@+id/producto2"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo"
                    android:contentDescription="@string/_10"
                    android:isScrollContainer="false"
                    android:keepScreenOn="false"
                    android:onClick="onClick"
                    android:paddingStart="155dp"
                    android:paddingEnd="25dp" />

                <ImageButton
                    android:id="@+id/producto3"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo"
                    android:contentDescription="@string/_15"
                    android:isScrollContainer="false"
                    android:keepScreenOn="false"
                    android:onClick="onClick"
                    android:paddingStart="155dp"
                    android:paddingEnd="25dp" />

                <ImageButton
                    android:id="@+id/producto4"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo"
                    android:contentDescription="@string/_20"
                    android:isScrollContainer="false"
                    android:keepScreenOn="false"
                    android:onClick="onClick"
                    android:paddingStart="155dp"
                    android:paddingEnd="25dp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btVerTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/edittext_rounded_corners_border"
            android:backgroundTint="#FFEB3B"
            android:onClick="onClick"
            android:text="@string/ver_todo"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>