<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivEnvio"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002"
            app:srcCompat="@drawable/envio" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEnvio"
        app:layout_constraintVertical_bias="0.18">

        <EditText
            android:id="@+id/etDir1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_rounded_corners_border"
            android:hint="@string/linea_direcci_n_1"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textColorHint="#9B9B9B"
            android:textSize="27sp" />

        <EditText
            android:id="@+id/etDir2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_rounded_corners_border"
            android:hint="@string/linea_direcci_n_2"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textColorHint="#9B9B9B"
            android:textSize="27sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etCP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_rounded_corners_border"
                android:hint="@string/c_digo_postal"
                android:inputType="number"
                android:padding="20dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="#9B9B9B"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etCiudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_rounded_corners_border"
                android:hint="@string/ciudad"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="#9B9B9B"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btPedido"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/edittext_rounded_corners_border"
        android:backgroundTint="@color/colorPrimary"
        android:paddingLeft="10dp"

        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:text="@string/realizar_pedido"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>


