<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-151dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFEB3B"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvUsr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:text="@string/nombre_usuario"
                    android:textAlignment="textEnd"
                    android:textSize="24sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivUsr"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_launcher_round"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp"
                    tools:srcCompat="@tools:sample/avatars[3]" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivProducto"
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/foto_producto"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/nombre_producto_pordefecto"
                android:textColor="#000000"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="45dp"
                android:baselineAligned="false"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/precio"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btAddCesta"
                    android:layout_width="15dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_rounded_corners_border"
                    android:backgroundTint="#FFEB3B"
                    android:drawableStart="@drawable/add_carrito"
                    android:paddingStart="28dp"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btComprar"
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_rounded_corners_border"
                    android:backgroundTint="#FFEB3B"
                    android:text="@string/comprar"
                    android:textSize="36sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvTituloDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/descipci_n"
                android:textColor="#FC000000"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tvDes"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/des_producto_pordefecto"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>